<resources>
    <string name="app_name">My Purchases</string>
    <string name="main_app_bar_title">Выберите список или создайте новый</string>
    <string name="create_list_app_bar_title">Создание списка товаров</string>
    <string name="category_title">Категория</string>
    <string name="new_category_text">Новая</string>
    <string name="product_list_hint">Напишите список товаров через запятую</string>
    <string name="limit_chars_field">%1$d/%2$d</string>
    <string name="title_hint">Название списка</string>
    <string name="new_category_hint">Название категории</string>
    <string name="add_button">Добавить</string>
    <string name="back_button">Вернуться</string>
    <string name="create_list_button">Создать список</string>
    <string name="edit_icon_desc">Редактировать</string>
    <string name="delete_item_snackbar_title">Удаление</string>
    <string name="delete_item_snackbar_action">Отмена</string>
    <string name="floating_button_add_list_desc">Добавить список</string>
    <string name="button_change_text">Изменить</string>
    <string name="products_empty_hint">Добавьте товары по клику на <b>+</b> \nв верхней панели</string>
</resources>