<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createlist.CreateListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/title_hint"
            android:inputType="none"
            android:maxLines="2"
            android:minLines="1"
            android:padding="12dp" />

        <TextView
            android:id="@+id/title_text_limit"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="4dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/list_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:gravity="top"
            android:hint="@string/product_list_hint"
            android:inputType="none"
            android:maxLines="10"
            android:minLines="5"
            android:padding="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/category_title" />

            <ImageView
                android:id="@+id/edit_categories_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/edit_icon_desc"
                android:src="@android:drawable/ic_menu_edit"
                android:layout_gravity="center_vertical"
                android:visibility="gone"/>
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="16dp"
            app:chipSpacingVertical="0dp"
            app:selectionRequired="true"
            app:singleSelection="true" />

        <LinearLayout
            android:id="@+id/create_custom_category_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/category_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:hint="@string/new_category_hint"
                android:inputType="none"
                android:maxLines="2"
                android:minLines="1"
                android:padding="12dp" />

            <Space
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/add_category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:enabled="false"
                android:text="@string/add_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/back_button" />

        <Space
            android:layout_width="16dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/create_list_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/create_list_button"
            android:enabled="false"/>
    </LinearLayout>
</RelativeLayout>